[package]
name = "rpipes"
version = "0.1.1"
authors = ["Joshua Karns <jkarns275@gmail.com>"]
description = "A 'terminal saver' program that prints pipes."
license = "GPL-3.0-only"

[dependencies]
rand = "0.4"
ctrlc = { version = "3.0", features = ["termination"] }
clap = "2.32.0"
terminal_size = "0.1.8"
pancurses = { version = "0.16", features = ["wide", "win32"] }
